updated styling and resume

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,213 +1,573 @@
-body {
-    margin: 2%;
+html {
+    scroll-behavior: smooth;
+}
+  
+h1, h2, h3, h5, h6 {
+    color: #595b5c;
+}
+
+h1, h2 {
+    text-align: center;
+}
+
+a {
+    font-size: larger;
+}
+
+.navbar-light .navbar-brand {
+    color: #79afea; 
+    font-size: xx-large;
+    font-weight: bolder;
+}
+
+#about, #contact, #carouselExampleIndicators {
+    border: none;
+    margin: auto;
+}
+
+.card {
+    border: transparent;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+#carouselExampleIndicators {
+    height: 100vh;
+    align-items: center;
+    padding-top: 20%;
+    background-image: url(https://img4.goodfon.com/original/1680x1050/c/f2/prud-derevia-stvoly-vetvi-tuman-voda-otrazheniia-goluboi-pru.jpg);
     background-repeat: no-repeat;
 }
 
-h2 {
-    padding-left: 3%;
+#contact {
+    height: 100vh;
+    align-items: center;
+    padding-top: 20%;
+    background-image: url(https://isorepublic.com/wp-content/uploads/2020/01/iso-republic-blue-rolling-hills-in-the-distance-2048x1152.jpg);
 }
 
-.background {
-    top: 0;
-    left: 0;
-    position: relative;
-    width: 100vw;
-    height: 100%;
-}
-  
-p {
-    position: relative;
-    display: inline;
+#project {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.about-the-author {
-    background-color: #ffffff40;
-    width: max-content;
-    height: min-content;
-    border-radius: 25px;
-    padding: 5%;
-    margin: 10%;
-    margin-left: 15%;
+.portfolio {
+    padding: 3%;
+    background-color: #e9f3ff;
+    margin: 2%;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    align-content: center;
+    position: absolute;
 }
-  
-.about-the-author .author-title {
-    text-transform: uppercase;
+
+.col-md-5 {
+    text-align: center;
 }
-  
-.social-footer {
+
+.card-img {
+    float: right;
+}
+
+.card-img-top {
+    color: #595b5c;
+    text-align: center;
+    padding-bottom: 2%;
+}
+
+.card {
     padding: 2%;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    background-color: #ffffffc7;
+    border-radius: 10px;
+}
+
+.flip-card {
+    background-color: transparent;
+    width: 250px;
+    height: 250px;
+    perspective: 1000px;
 }
   
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+  
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+  
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+  
+.flip-card-front {
+    color: #595b5c;
+    border-radius: 10px;
+    padding: 2%;
+}
+  
+.flip-card-back {
+    background-color: white;
+    color: #595b5c;
+    transform: rotateY(180deg);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+    padding: 2%;
+}
+
+@media print, screen and (max-width: 600px) {
+    .card-img {
+        margin-top: 20%;
+        max-height: 35vh;
+        max-width: 250px;
+    }
+    .card-body {
+        text-align: center;
+    }
+    .button-hover-reveal-wrapper {
+        width: 100%;
+    }
+    #contact {
+        padding-top: 60%;
+    }
+    li, p {
+        font-size: 5vw;
+    }
+    #works {
+        padding-top: 30%;
+    }
+    .portfolio {
+        background-color: transparent;
+        box-shadow: none;
+    }
+    img {
+        max-width: 80%;
+        margin: auto;
+    }
+    #project {
+        height: 27vh;
+    }
+    #carouselExampleIndicators {
+        padding-top: 20%;
+    }
+}
+
+@media print, screen and (min-width: 601px) {
+    .card-img {
+        float: right;
+        max-height: 500px;
+    }
+    .card-body {
+        text-align: left;
+    }
+    .button-hover-reveal-wrapper {
+        width: 80%;
+        text-align: center;
+    }
+    #project {
+        height: 30vh;
+    }
+    p, li {
+        font-size: larger;
+    }
+    #carouselExampleIndicators {
+        padding-top: 10%;
+    }
+}
+  
+#work {
+    background-color: transparent;
+    border: none;
+}
+
+.fa-code {
+    color: #595b5c;
+}
+  
+.fa-link {
+    color: #595b5c;
+}
+  
+.card-product-hover-icons {
+    padding: 2%;
+}
+     
+p {
+    display: inline;
+    color: #595b5c;
+}
+  
+img {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+}
+  
+.fa-code {
+    color: #595b5c;
+}
+  
+.fa-link {
+    color: #595b5c;
+}
+  
+.card-product-hover-icons {
+    padding: 2%;
+}
+  
+.fa-angle-up {
+    font-size: 3rem;
+    color: #79afea;
+}
+
+.fa-angle-down {
+    font-size: 3rem;
+    color: #79afea;
+}
+    
 .social-footer .social-footer-icons li:last-of-type {
     margin-right: 0;
 }
-  
+    
 .social-footer .social-footer-icons .fa {
     font-size: 1.3rem;
     color: #fffefe;
-}
-  
+} 
+    
 .social-footer .social-footer-icons .fa:hover {
     color: #f8f6f6;
     transition: color 0.3s ease-in;
 }
-  
-/* @charset "UTF-8"; */
-
+    
 .rounded-social-buttons {
-  text-align: center;
-}
-
-.rounded-social-buttons .social-button {
-  display: inline-block;
-  position: relative;
-  cursor: pointer;
-  width: 3.125rem;
-  height: 3.125rem;
-  border: 0.125rem solid transparent;
-  padding: 0;
-  text-decoration: none;
-  text-align: center;
-  color: #fefefe;
-  font-size: 1.5625rem;
-  font-weight: normal;
-  line-height: 2em;
-  border-radius: 1.6875rem;
-  transition: all 0.5s ease;
-  margin-right: 0.25rem;
-  margin-bottom: 0.25rem;
-}
-
-.rounded-social-buttons .social-button:hover, .rounded-social-buttons .social-button:focus {
-  -webkit-transform: rotate(360deg);
-      -ms-transform: rotate(360deg);
-          transform: rotate(360deg);
-}
-
-.rounded-social-buttons .social-button.linkedin {
-  background: #f0ce9e;
-}
-
-.rounded-social-buttons .social-button.linkedin:before {
-  font-family: "FontAwesome";
-  content: "";
-}
-
-.rounded-social-buttons .social-button.linkedin:hover, .rounded-social-buttons .social-button.linkedin:focus {
-  color: #f0ce9e;
-  background: #fefefe;
-  border-color: #f0ce9e;
-}
-
-.rounded-social-buttons .social-button.google-plus {
-  background: #f0ce9e;
-}
-
-.rounded-social-buttons .social-button.google-plus:before {
-  font-family: "FontAwesome";
-  content: "";
-}
-
-.rounded-social-buttons .social-button.google-plus:hover, .rounded-social-buttons .social-button.google-plus:focus {
-  color: #f0ce9e;
-  background: #fefefe;
-  border-color: #f0ce9e;
-}
-
-.rounded-social-buttons .social-button.github {
-  background: #f0ce9e;
-}
-
-.rounded-social-buttons .social-button.github:before {
-  font-family: "FontAwesome";
-  content: "";
-}
-
-.rounded-social-buttons .social-button.github:hover, .rounded-social-buttons .social-button.github:focus {
-  color: #f0ce9e;
-  background: #fefefe;
-  border-color: #f0ce9e;
-}
-
-.button-hover-reveal-wrapper {
-    overflow: hidden;
-    margin: 5%;
-    border: 2px solid #f0ce9e;
-    border-radius: 5000px;
     text-align: center;
-    background: #fefefe;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
 }
   
+.rounded-social-buttons .social-button {
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    width: 3.125rem;
+    height: 3.125rem;
+    border: 0.125rem solid transparent;
+    padding: 0;
+    text-decoration: none;
+    text-align: center;
+    color: #fefefe;
+    font-size: 1.5625rem;
+    font-weight: normal;
+    line-height: 2em;
+    border-radius: 1.6875rem;
+    transition: all 0.5s ease;
+    margin-right: 0.25rem;
+    margin-bottom: 0.25rem;
+}
+  
+.rounded-social-buttons .social-button:hover, .rounded-social-buttons .social-button:focus {
+    -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+            transform: rotate(360deg);
+}
+  
+.rounded-social-buttons .social-button.linkedin {
+    background: #79afea;
+}
+  
+.rounded-social-buttons .social-button.linkedin:before {
+    font-family: "FontAwesome";
+    content: "";
+}
+  
+.rounded-social-buttons .social-button.linkedin:hover, .rounded-social-buttons .social-button.linkedin:focus {
+    color: #79afea;
+    background: #fefefe;
+    border-color: #79afea;
+}
+  
+.rounded-social-buttons .social-button.google-plus {
+    background: #79afea;
+}
+  
+.rounded-social-buttons .social-button.google-plus:before {
+    font-family: "FontAwesome";
+    content: "";
+}
+  
+.rounded-social-buttons .social-button.google-plus:hover, .rounded-social-buttons .social-button.google-plus:focus {
+    color: #79afea;
+    background: #fefefe;
+    border-color: #79afea;
+}
+  
+.rounded-social-buttons .social-button.github {
+    background: #79afea;
+}
+  
+.rounded-social-buttons .social-button.github:before {
+    font-family: "FontAwesome";
+    content: "";
+}
+  
+.rounded-social-buttons .social-button.github:hover, .rounded-social-buttons .social-button.github:focus {
+    color: #79afea;
+    background: #fefefe;
+    border-color: #79afea;
+}
+  
+.button-hover-reveal-wrapper {
+    border: 2px solid #79afea;
+    border-radius: 5000px;
+    margin-top: 20px;
+}
+    
 .button-hover-reveal-wrapper:hover {
     border: none;
-    background-color: #f0ce9e;
+    background-color: #79afea;
     transition: background-color 0.5s ease;
 }
-  
+    
 .button-hover-reveal-wrapper:hover .button-hover-reveal {
     display: block;
     font-size: 16px;
-    padding: 22px;
 }
-  
+    
 .button-hover-reveal-wrapper:hover .button-hover-reveal:hover {
     transition: background-color 0.5s ease;
 }
-  
+    
 .button-hover-reveal-wrapper:hover label {
     display: none;
-    background-color: #f0ce9e;
+    background-color: #79afea;
 }
-  
+    
 .button-hover-reveal-wrapper .button-hover-reveal {
     display: none;
     text-decoration: none;
     color: #fefefe;
     z-index: 1;
+    font-size: 90%;
+    margin: auto;
+    padding: 4%;
+}
+    
+.button-hover-reveal-wrapper label {
+    padding: 4%;
+    color: #79afea;
+    font-size: 90%;
+    font-weight: bold;
+    margin: auto;
 }
   
-.button-hover-reveal-wrapper label {
-    padding: 16px;
-    color: #f0ce9e;
-    font-size: 16px;
-    font-weight: bold;
-}
-
-.row {
-    height: 100vh;
-    width: 100%;
-    align-items: center;
-    justify-content: space-around;
-}
-
 footer {
-    color: #f0ce9e;
+    color: #79afea;
     position:fixed;
     bottom: 0px;
-    height: 8%;
-    width: 100vw;
 }
-
+  
 .navbar-toggler {
-    border-color: #f0ce9e;
+    border-color: #79afea;
+}
+  
+.row {
+    align-items: center;
+    justify-content: space-around;
+    margin: auto;
 }
 
-img {
+#page-row {
+    height: 100vh;
+}
+
+.contact-us {
+    padding: 2%;
+    background-color: #ffffffc7;
     border-radius: 10px;
-    height: 70vh;
+}
+    
+.contact-us-section {
+    width: max-content;
+    height: min-content;
+    border-radius: 25px;
+    padding: 5%;
+    background-color: #ffffff9e;
+    margin: auto;
+    position: absolute;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+    
+.contact-us-section .contact-us-section-left {
+    border-bottom: 2px solid #e6e6e6;
+    padding-bottom: 2rem;
+    margin-bottom: 2rem;
+    width: 50%;
+    float: left;
+}
+    
+@media print, screen and (min-width: 40em) {
+    .contact-us-section .contact-us-section-left {
+        border-right: 1px solid #e6e6e6;
+        border-bottom: 0;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+}
+    
+.contact-us-section .contact-us-section-right {
+    padding-left: 2rem;
+    width: 50%;
+    float: right;
+}
+    
+@media print, screen and (min-width: 40em) {
+    .contact-us-section .contact-us-section-right {
+      border-left: 1px solid #e6e6e6;
+    }
+}
+    
+.contact-us-section .contact-us-header {
+    margin-bottom: 2rem;
+    text-align: center;
+    color: #595b5c;
+}
+    
+@media screen and (min-width: 40em) and (max-width: 74.9375em) {
+    .contact-us-section .contact-us-header {
+      font-size: 32px;
+    }
+}
+    
+.contact-us-section .responsive-embed {
+    margin-bottom: 0;
+    padding-bottom: 55%;
+}
+    
+.contact-us-form input[type=text],
+.contact-us-form input[type=email],
+.contact-us-form textarea {
+    margin-bottom: 1.5rem;
+    border: lightgray solid 1px;
+    border-radius: 10px;
+    padding: 5px;
+    width: 90%;
+    color: rgb(49, 49, 49);
+}
+    
+.contact-us-form-actions {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+}
+    
+.contact-us-form-actions input[type=submit] {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border-radius: 10px;
+    padding: 5px;
+    color: white;
+    background-color: #ffffff40;
+    border: none;
+}
+    
+.contact-us-list {
+    list-style-type: none;
+    margin: 0;
+    color: #595b5c;
+    margin-left: -20px;
+}
+    
+.contact-us-list li a {
+    color: #595b5c;
+}
+    
+.contact-us-list li::before {
+    margin-right: 2rem;
+    font-size: 2rem;
+    vertical-align: middle;
+    color: #79afea;
+    font-family: 'FontAwesome';
+}
+    
+.contact-us-list .address::before {
+    content: '\f041';
+    margin-left: 0.4rem;
+    margin-right: 2.3rem;
+}
+    
+.contact-us-list .email::before {
+    content: '\f003';
+}
+    
+.contact-us-list .phone::before {
+    content: '\f098';
+}
+    
+.button-rounded-hover {
+    border: 0;
+    color: #79afea;
+    font-weight: 500;
+    border-radius: 5000px;
+    padding: 1rem 2rem;
+    text-transform: uppercase;
+    position: relative;
+    overflow: hidden;
+    font-size: 1rem;
+    letter-spacing: 2px;
+    transition: all 0.35s ease;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+}
+    
+.button-rounded-hover:before {
+    opacity: 0;
+    content: "";
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    border-radius: inherit;
+    background-color: #79afea;
+    color: white;
+    transition: all 0.3s;
+    -webkit-transform: translateX(-100%);
+      -ms-transform: translateX(-100%);
+      transform: translateX(-100%);
+}
+    
+.button-rounded-hover:after {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    border: 5px solid #79afea;
+    color: #79afea;
+    content: '';
+    border-radius: inherit;
+}
+    
+.button-rounded-hover:hover,
+.button-rounded-hover:focus {
+    background-color: #79afea;
+    color: white;
+}
+    
+.button-rounded-hover:hover:before,
+.button-rounded-hover:focus:before {
+    -webkit-transform: translateX(0%);
+        -ms-transform: translateX(0%);
+          transform: translateX(0%);
+    opacity: 0.25;
 }
